--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
 	  xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1"> 
 
+	<welcome-file-list>
+		<welcome-file>itp.jsp</welcome-file>
+	</welcome-file-list>
 	<display-name>SpringMVCDemo</display-name>
 
 	<absolute-ordering/>
